--- a/COVID_Positive_Image_Classification.ipynb
+++ b/COVID_Positive_Image_Classification.ipynb
@@ -13164,7 +13164,7 @@
         "  <li> Squeezenet (fire modules) resulted in high training accuracy but low validation accuracy. Overfitting was attempted to be resolved using Batch Normalisation and Dropout. However, results did not improve much. With more resources and time at hand, further model tuning can be explored to get a better model fit  </li>\n",
         "  <li> VGG16 did not give good results with unfreezing last 5 layers as well as freezing all the layers </li>\n",
         "  <li> VGG19 performed better in comparison to VGG16. As the model results show training accuracy is increasing in 4 epochs run. Strangely, validation accuracy exceeds the training accuracy in last two epochs </li>\n",
-        "  <li> With access to paid resources of collab, further iterations of the above architectures will be explored. Currently, Sequential Keras model gave the best model results on the leaderboard. </li>"
+        "  <li> With access to paid resources of collab, further iterations of the above architectures will be explored along with Data Augmentation. Currently, Sequential Keras model using he_normal initializers gave the best model results on the leaderboard. </li>"
       ],
       "metadata": {
         "id": "t7Z9fykuWe9h"
